--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "laravel/homestead": "dev-php-7",
-        "zizaco/entrust": "dev-laravel-5"
+        "laravelcollective/html": "5.2.*",
     },
     "autoload": {
         "classmap": [
